# iqa

./: .gitignore  README.md  config.yaml  data.ipynb  main.py  pyproject.toml
src/data/: dataset.py
src/models/: .___pycache__  df_iqa_cnn.py
src/utils/: logging.py  timer.py
